--- a/warframe_checklist/main.css
+++ b/warframe_checklist/main.css
@@ -69,6 +69,11 @@ ul li.checked::before {
     opacity: 1;
 }
 
+.close-shadow {
+  opacity: 0.5;
+  background-color: #101000;
+}
+
 /* Style the header */
 .header {
     background-color: #3B9B6D;
