--- a/warframe_checklist/main.css
+++ b/warframe_checklist/main.css
@@ -87,6 +87,10 @@ ul li.checked::before {
     padding: 12px;
     opacity: 0.9;
 	background-color: transparent;
+	text-align: center;
+	line-height: 23px;
+	color: #9B9B91;
+	font-size: 24px;
 }
 
 .component .compTip {
@@ -94,6 +98,7 @@ ul li.checked::before {
     background-color: #171812;
     color: #F0F0E6;
     width: 160px;
+	font-size: 18px;
 	text-align: center;
     border-radius: 6px;
     padding: 5px 0;
