--- a/warframe_checklist/main.css
+++ b/warframe_checklist/main.css
@@ -210,3 +210,13 @@ input::-moz-placeholder{
 ul#items li:hover {
 	background: #49483E;
 }
+
+hr {
+	border: 0; 
+	height: 1px; 
+	width: 90%;
+	opacity: 0.5;
+	background: -moz-linear-gradient(left, #272822 5%, #BBBBB1 20%, #BBBBB1 80%, #272822 95%);
+	background: -webkit-linear-gradient(left, #272822 5%, #BBBBB1 20%, #BBBBB1 80%, #272822 95%);
+	background: linear-gradient(to right, #272822 5%, #BBBBB1 20%, #BBBBB1 80%, #272822 95%);
+}
