--- a/warframe_checklist/main.css
+++ b/warframe_checklist/main.css
@@ -1,32 +1,40 @@
 body {
-  background: #272822;
-  font-family: 'PT Sans', sans-serif;
+	background: #22231D;
+	font-family: 'PT Sans', sans-serif;
+	margin: 0px;
 }
 
-/* Include the padding and border in an element's total width and height */
 * {
-    box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 #version {
-	float: left;
-}
-/* Remove margins and padding from the list */
-ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+	float: right;
+	margin-right: 16px;
 }
 
-/* Style the list items */
-ul li {
+ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+ul.content-list {
+	position: static;
+}
+
+
+ul#weapon-items li,
+ul#frame-items li {
 	cursor: pointer;
 	position: relative;
 	padding: 12px 8px 12px 40px;
 	background: #272822;
 	font-size: 18px;
 	color: #E0E0D6;
-	
+	overflow: hidden;
+
 	display: inline-block;
 	width: 33%;
 
@@ -37,55 +45,49 @@ ul li {
 	user-select: none;
 }
 
-.stripe {
-    background: #22231D;
-}
-
 ul li.checked {
-    color: #BBBBB1;
+	color: #BBBBB1;
 }
 
-/* Add a "checked" mark when clicked on */
 ul li.checked::before {
-    content: '';
-    position: absolute;
-    border-color: #BBBBB1;
-    border-style: solid;
-    border-width: 0 2px 2px 0;
-    top: 10px;
-    left: 16px;
-    transform: rotate(45deg);
-    height: 15px;
-    width: 7px;
+	content: '';
+	position: absolute;
+	border-color: #BBBBB1;
+	border-style: solid;
+	border-width: 0 2px 2px 0;
+	top: 10px;
+	left: 16px;
+	-webkit-transform: rotate(45deg);
+	transform: rotate(45deg);
+	height: 15px;
+	width: 7px;
 }
 
-/* Style the close button */
 .close {
-    position: absolute;
-    right: 0;
-    top: 0;
-    padding: 12px;
-    opacity: 0;
+	position: absolute;
+	right: 0;
+	top: 0;
+	padding: 12px;
+	opacity: 0;
 }
 
 .close:hover {
-    background-color: #f44336;
-    color: white;
-    opacity: 1;
+	background-color: #f44336;
+	color: white;
+	opacity: 1;
 }
 
 .close-shadow {
-  opacity: 0.5;
-  background-color: #101000;
+	opacity: 0.5;
+	background-color: #101000;
 }
 
-/* Style the component alert */
 .component {
-    position: absolute;
-    right: 34;
-    top: 0;
-    padding: 12px;
-    opacity: 0.9;
+	position: absolute;
+	right: 34;
+	top: 0;
+	padding: 12px;
+	opacity: 0.9;
 	background-color: transparent;
 	text-align: center;
 	line-height: 23px;
@@ -94,21 +96,21 @@ ul li.checked::before {
 }
 
 .component .compTip {
-    visibility: hidden;
-    background-color: #171812;
-    color: #F0F0E6;
-    width: 160px;
+	visibility: hidden;
+	background-color: #171812;
+	color: #F0F0E6;
+	width: 150px;
 	font-size: 18px;
 	text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
+	border-radius: 6px;
+	padding: 5px 0;
 	opacity: 1;
-    /* Position the tooltip */
-    position: absolute;
-    z-index: 1;
-    bottom: 100%;
-    left: 50%;
-    margin-left: -80px;
+	/* Position the tooltip */
+	position: absolute;
+	z-index: 1;
+	bottom: 100%;
+	left: 50%;
+	margin-left: -75px;
 }
 
 .component:hover .compTip {
@@ -116,12 +118,15 @@ ul li.checked::before {
 }
 
 /* Style the header */
+
 .header {
-    background-color: #3B9B6D;
-    padding: 30px;
-    color: #272822;
-    text-align: center;
-    font-weight: bold;
+	background-color: #357588;
+	padding: 30px 0px 0px 0px;
+	color: #272822;
+	text-align: center;
+	font-weight: bold;
+	margin: 0px;
+	width: 100%;
 }
 
 h1 {
@@ -130,68 +135,27 @@ h1 {
 }
 
 /* Clear floats after the header */
-.header:after {
-    content: "";
-    display: table;
-    clear: both;
+
+.header:after,
+.submenu:after {
+	content: "";
+	display: table;
+	clear: both;
 }
 
-.sidenav {
-  width: 220px;
-  float: left;
-  background: #272822;
-}
-
-.sidenav a {
-  color: #E0E0D6;
-  font-size: 18px;
-  font-weight: bold;
-  display: block;
-  padding: 12px;
-  text-decoration: none;
-}
-
-.sidenav a:hover {
-  background-color: #3B9B6D;
-  color: #22231D;
-}
-
-.navopen {
-  background-color: #3B9B6D;
-}
-
-.navopen a {
-  color: #22231D;
-}
-
-.side {
-  display: none;
-}
-
-.side a {
-  font-weight: normal;
-  clear: both;
-  margin-left: 16px;
-}
-
-.side a:hover {
-  background: #49483E;
-  color: #E0E0D6;
-}
-
-.main {
-  margin-left: 220px;
-}
-
-/* Style the input */
 input {
-    border: none;
-    width: 100%;
-    padding: 12px;
-    font-size: 18px;
-    background-color: #272822;
-    color: #E0E0D6;
-    font-family: serif;
+	border: none;
+	width: 230px;
+	padding: 16px 13px 12px 13px;
+	line-height: 17px;
+	font-size: 16px;
+	background-color: #272822;
+	color: #E0E0D6;
+	font-family: sans-serif;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	display: block;
+	margin-bottom: 2px;
 }
 
 input:focus {
@@ -199,14 +163,94 @@ input:focus {
 	background-color: #49483E;
 }
 
-input::-webkit-input-placeholder{
+input::-webkit-input-placeholder {
 	color: #A0A096;
 }
 
-input::-moz-placeholder{
+input::-moz-placeholder {
 	color: #A0A096;
 }
 
-ul#items li:hover {
+.topNav {
+	text-align: left;
+	margin-left: 10px;
+}
+
+.topNav ul li {
+	cursor: pointer;
+	display: inline-block;
+	margin: 0px;
+	padding: 12px;
+	color: #272822;
+}
+
+.topNav ul li:hover,
+.topNav-active {
+	background-color: #272822;
+}
+
+.topNav ul li:hover a {
+	color: #E0E0D6;
+}
+
+.topNav a {
+	text-decoration: none;
+	font-size: 20px;
+	font-weight: bold;
+	color: #272822;
+}
+
+.topNav-active a {
+	color: #E0E0D6;
+}
+
+.hidden {
+	visibility: hidden;
+	position: absolute;
+}
+
+.submenu {
+	float: left;
+	width: 100%;
+	/* background: linear-gradient(to top, #22231D 12px, #272822 12px); */
+	background-color: #272822;
+	position: relative;
+}
+
+.submenu li {
+	cursor: pointer;
+	display: inline-block;
+	margin: 0px;
+	color: #272882;
+	padding: 12px;
+	font-size: 18px;
+	vertical-align: text-top;
+	position: relative;
+}
+
+.submenu li:first-child {
+	padding: 0px;
+}
+
+.submenu a {
+	text-decoration: none;
+	color: #E0E0D6;
+}
+
+.submenu li:hover,
+.subNav-active {
+	background: linear-gradient(to top, #357588 2px, #272822 2px);
+}
+
+.content,
+ul#weapon-items li.stripe {
+	background-color: #22231D;
+}
+
+ul#weapon-items li.checked {
+	color: #BBBBB1;
+}
+
+ul#weapon-items li:hover {
 	background: #49483E;
 }
